Completed create and read

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <title>Vocab-YOU-lary</title>
 </head>
 <body>
+  <div id="welcome"></div>
   <div id="app"></div>
-  <div id="login-form-container"></div>
+  <!-- <div id="login-form-container"></div> -->
 </body>
 </html>
